[gd_scene format=3 uid="uid://c5jcja53wdsa6"]

[ext_resource type="Script" uid="uid://b6nvbwim3y43t" path="res://scripts/windows/ConfirmationWindow.gd" id="1_7opyx"]
[ext_resource type="StyleBox" uid="uid://dy6xysdb2nfaf" path="res://assets/themes/style_box_background.tres" id="2_pli4v"]
[ext_resource type="StyleBox" uid="uid://ly6v5w6s4o2y" path="res://assets/themes/buttons/button/button_normal.tres" id="4_2qtoo"]
[ext_resource type="StyleBox" uid="uid://b71eph0xk3o6" path="res://assets/themes/buttons/button/button_pressed.tres" id="5_mgl06"]
[ext_resource type="StyleBox" uid="uid://bevcb7gt65cgf" path="res://assets/themes/buttons/button/button_hover.tres" id="6_6qiss"]
[ext_resource type="StyleBox" uid="uid://cggclb0lav4x7" path="res://assets/themes/buttons/main_button/main_button_normal.tres" id="7_jx3on"]
[ext_resource type="StyleBox" uid="uid://c4jc6bmwoy68s" path="res://assets/themes/buttons/main_button/main_button_pressed.tres" id="8_t78jm"]
[ext_resource type="StyleBox" uid="uid://cfdcd087aiuc3" path="res://assets/themes/buttons/main_button/main_button_hoverl.tres" id="9_56jib"]

[node name="ConfirmationWindow" type="Window" unique_id=69873713]
oversampling_override = 1.0
initial_position = 1
size = Vector2i(380, 180)
transient = true
exclusive = true
unresizable = true
popup_window = true
minimize_disabled = true
maximize_disabled = true
script = ExtResource("1_7opyx")

[node name="ConfirmationWindowContent" type="PanelContainer" parent="." unique_id=1761377107]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -55.5
offset_right = 179.0
offset_bottom = 55.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_pli4v")

[node name="MarginContainer" type="MarginContainer" parent="ConfirmationWindowContent" unique_id=662441323]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmationWindowContent/MarginContainer" unique_id=327062324]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="MessageLabel" type="Label" parent="ConfirmationWindowContent/MarginContainer/VBoxContainer" unique_id=1455053944]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="ConfirmationWindowContent/MarginContainer/VBoxContainer" unique_id=717842333]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CancelButton" type="Button" parent="ConfirmationWindowContent/MarginContainer/VBoxContainer/HBoxContainer2" unique_id=1641472250]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("4_2qtoo")
theme_override_styles/pressed = ExtResource("5_mgl06")
theme_override_styles/hover = ExtResource("6_6qiss")
text = "取消"

[node name="ConfirmButton" type="Button" parent="ConfirmationWindowContent/MarginContainer/VBoxContainer/HBoxContainer2" unique_id=1536466789]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.95304054, 0.9530404, 0.95304054, 1)
theme_override_styles/normal = ExtResource("7_jx3on")
theme_override_styles/pressed = ExtResource("8_t78jm")
theme_override_styles/hover = ExtResource("9_56jib")
text = "确定"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="ConfirmationWindowContent/MarginContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="ConfirmationWindowContent/MarginContainer/VBoxContainer/HBoxContainer2/ConfirmButton" to="." method="_on_confirm_button_pressed"]
